re-parse-proc-macro/src/snapshots/re_parse_proc_macro__dfa__tests__nfa_to_dfa-3.snap
---
source: re-parse-proc-macro/src/dfa.rs
expression: "parse(\"A?B\")"
snapshot_kind: text
---
Ok(
    Dfa {
        root: ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
            2,
        ),
        nodes: Arena {
            nodes: [
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            'B': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                1,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {},
                    },
                },
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            'A': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                            'B': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                1,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            'B': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                1,
                            ),
                        },
                    },
                },
            ],
        },
    },
)
