re-parse-proc-macro/src/snapshots/re_parse_proc_macro__dfa__tests__nfa_to_dfa-7.snap
---
source: re-parse-proc-macro/src/dfa.rs
expression: "parse(\"A{foo}B+{bar}\")"
snapshot_kind: text
---
Ok(
    Dfa {
        root: ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
            3,
        ),
        nodes: Arena {
            nodes: [
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: Some(
                            ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                4,
                            ),
                        ),
                        edges: {
                            'B': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            'B': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: Some(
                            ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                5,
                            ),
                        ),
                        edges: {},
                    },
                },
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {
                            'A': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                2,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: true,
                    variable: Some(
                        RegexVariable {
                            name: "bar",
                            kind: Singular,
                        },
                    ),
                    edges: DfaEdges {
                        default: Some(
                            ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                4,
                            ),
                        ),
                        edges: {},
                    },
                },
                DfaNode {
                    is_accepting: false,
                    variable: Some(
                        RegexVariable {
                            name: "foo",
                            kind: Singular,
                        },
                    ),
                    edges: DfaEdges {
                        default: Some(
                            ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                5,
                            ),
                        ),
                        edges: {
                            'B': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: Some(
                            ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                4,
                            ),
                        ),
                        edges: {},
                    },
                },
            ],
        },
    },
)
