re-parse-proc-macro/src/snapshots/re_parse_proc_macro__dfa__tests__nfa_to_dfa-9.snap
---
source: re-parse-proc-macro/src/dfa.rs
expression: "parse(\".{var}.\")"
snapshot_kind: text
---
Ok(
    Dfa {
        root: ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
            3,
        ),
        nodes: Arena {
            nodes: [
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: None,
                        edges: {},
                    },
                },
                DfaNode {
                    is_accepting: false,
                    variable: Some(
                        RegexVariable {
                            name: "var",
                            kind: Singular,
                        },
                    ),
                    edges: DfaEdges {
                        default: Some(
                            ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        ),
                        edges: {},
                    },
                },
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: Some(
                            ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                1,
                            ),
                        ),
                        edges: {},
                    },
                },
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: Some(
                            ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                2,
                            ),
                        ),
                        edges: {},
                    },
                },
            ],
        },
    },
)
