re-parse-proc-macro/src/snapshots/re_parse_proc_macro__dfa__tests__nfa_to_dfa_ambiguous_variable.snap
---
source: re-parse-proc-macro/src/dfa.rs
expression: "parse(\"A{foo}B?{bar}\")"
snapshot_kind: text
---
Err(
    Dfa(
        AmbiguousVariables {
            first: "foo",
            second: "bar",
        },
    ),
)
