re-parse-proc-macro/src/snapshots/re_parse_proc_macro__dfa__tests__simplify.snap
---
source: re-parse-proc-macro/src/dfa.rs
expression: "parse(\".+;\")"
snapshot_kind: text
---
Ok(
    Dfa {
        root: ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
            1,
        ),
        nodes: Arena {
            nodes: [
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: Some(
                            ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        ),
                        edges: {
                            ';': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                2,
                            ),
                        },
                    },
                },
                DfaNode {
                    is_accepting: false,
                    variable: None,
                    edges: DfaEdges {
                        default: Some(
                            ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        ),
                        edges: {},
                    },
                },
                DfaNode {
                    is_accepting: true,
                    variable: None,
                    edges: DfaEdges {
                        default: Some(
                            ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                0,
                            ),
                        ),
                        edges: {
                            ';': ArenaIndex<re_parse_proc_macro::dfa::DfaNode>(
                                2,
                            ),
                        },
                    },
                },
            ],
        },
    },
)
